--- a/client/admin/approve.html
+++ b/client/admin/approve.html
@@ -7,7 +7,7 @@
                 <dt>Uppladdad</dt>
                 <dd>{{receipt.date}}</dd>
             </dl>
-            <input class="form-control" id="buys" type="number" placeholder="Antal risifrutti" min="0" max="10"/>
+            <input class="form-control" id="buys" type="number" placeholder="Antal Risifrutti" min="0" max="10"/>
             <input class="form-control" type="hidden" value="{{receipt._id}}" id="receiptId"/>
             <button class="btn" id="approve">Godkänn och gå till nästa</button>
         </div>
