--- a/client/front/competition.html
+++ b/client/front/competition.html
@@ -1,9 +1,7 @@
 <template name="front">
     <div id="main-front">
         <div id="jordgubbar"></div>
-        {{> header }}
-         
-        {{> competition }}
+        {{> header }} {{> competition }}
         <div id="front-footer">
             <div id="red-footer">
                 <img src="/red-footer.png" />
@@ -13,22 +11,25 @@
                             <div class="col-md-4">
                                 <h1>1</h1>
                                 <br/> Samla 25 st Risifrutti
+                                <p>Köp Risifrutti i din butik och kom ihåg att spara kvittot.</p>
                             </div>
                             <div class="col-md-4">
                                 <h1>2</h1>
                                 <br/> Ladda upp dina kvitton
+                                <p>Ladda upp bilden direkt här på sidan genom att klicka på "skapa konto här" och följa instruktionerna. Inköpsställe, datum och klockslag samt information om ditt Risifrutti- inköp måste vara med för att vi ska kunna godkänna registreringen.</p>
                             </div>
                             <div class="col-md-4">
                                 <h1>3</h1>
                                 <br/> Få presentkort hos Intersport
+                                <p>Efter 25 godkända registrerade Risifruttis får du Intersport presentkort skickat till din registrerade adress! Notera att presentkortet aktiveras digitalt vilket kan ta upp till 5 arbetsdagar efter att du mottagit det.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div id="white-footer">
-                <div class="container" >
-                    <div class="row"> 
+                <div class="container">
+                    <div class="row">
                         <a href="#">Villkor</a>
                         <a href="#">Kontakt</a>
                         <a href="#">Frågor och svar</a>
@@ -44,8 +45,8 @@
         <div class="row" id="start-container">
             <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1" style="padding-top: 100px">
 
-                <img src="start.png" id="start" class="hidden-xs"/>
-                <img src="start_mobile.png" id="start" class="visible-xs-block"/>
+                <img src="start.png" id="start" class="hidden-xs" />
+                <img src="start_mobile.png" id="start" class="visible-xs-block" />
             </div>
         </div>
         <div class="row">
