--- a/client/front/upload.html
+++ b/client/front/upload.html
@@ -1,4 +1,5 @@
 <template name="upload">
+    
     <div class="row">
         <div class="form col-md-6 col-md-offset-3">
             {{percentReady}}
@@ -30,7 +31,16 @@
 <template name="profile">
     {{>header}}
     <div id="main">
+  
         <div class="container" style="padding-top:50px">
+            {{#if user.profile.sendCoupon}}
+            <div class="row">
+                <div class="col-md-12" id="congrats">
+                    <h1>Grattis!</h1>
+                    <p>Du har samlat minst 25 Risifrutti, och vi kommer snart att skicka en kupong till dig</p>
+                </div>
+            </div>
+            {{/if}}
             <div class="row">
                 <h1 style="padding-left:15px">Samla dina kvitton</h1>
                 <br/>
@@ -48,9 +58,9 @@
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9">
                             <div class="dark-blue">
-                                <h3>Du har {{numOfBuys}} kvitton</h3></div>
+                                <h3>Du har {{numOfBuys}} Risifrutti</h3></div>
                             <h2>{{name}}</h2>
-                            <p> Du har samlat in {{numOfBuys}} risifrutti kvitton. När du har fått 25 st så skickar vi dig
+                            <p> Du har samlat in {{numOfBuys}} Risifrutti. När du har fått 25 st så skickar vi dig
                                 ett presentkort på Intersport.</p>
                         </div>
                     </div>
