--- a/risifrutti.html
+++ b/risifrutti.html
@@ -1,5 +1,5 @@
 <head>
-    <title>risifrutti</title>
+    <title>Risifrutti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
