--- a/client/front/upload.html
+++ b/client/front/upload.html
@@ -35,9 +35,8 @@
         <div class="container" style="padding-top:50px">
             {{#if user.profile.sendCoupon}}
             <div class="row">
-                <div class="col-md-12" id="congrats">
-                    <h1>Grattis!</h1>
-                    <p>Du har samlat minst 25 Risifrutti, och vi kommer snart att skicka en kupong till dig</p>
+                <div class="col-md-12 text-center" id="congrats">
+                    <img src="congrats.png" />
                 </div>
             </div>
             {{/if}}
