--- a/client/front/competition.html
+++ b/client/front/competition.html
@@ -29,11 +29,11 @@
             </div>
             <div id="white-footer">
                 <div class="container">
-                    <div class="row">
-                        <a href="#">Villkor</a>
-                        <a href="#">Kontakt</a>
-                        <a href="#">Frågor och svar</a>
-                    </div>
+                    <div class="row"> 
+                        <a href="/fragor-och-svar#villkor">Villkor</a>
+                        <a href="/fragor-och-svar#kontakt">Kontakt</a>
+                        <a href="/fragor-och-svar">Frågor och svar</a>
+                </div>
                 </div>
             </div>
         </div>
