--- a/client/front/faq.html
+++ b/client/front/faq.html
@@ -6,15 +6,28 @@
                 <div class="col-md-6 col-md-offset-3 col-xs-12 col-sm-8 col-sm-offset-2">
                     <h3>Villkor</h3>
                     <a name="villkor"></a>
-                    <p>Presentkortet är giltigt i 3 år från inköpsdatum. Borttappat kort ersätts ej. Kan ej lösas in mot kontanter. Mer information
-                    om presentkort hittar du under Frågor och svar på
-                    <a href="https://www.intersport.se/kundservice/fragor--svar/presentkort/">www.intersport.se</a> </p>
-                    <p>Presentkort är en värdehandling på samma sätt som pengar. Om du tappar bort det
-                    har du inte rätt att få ett nytt av butiken. Ett presentkort gäller i tio år om inget annat anges på
-                    presentkortet. Presentkortet kan inte lösas in mot kontanta pengar, och du kan inte heller få kontanter
-                    i växel om du handlar för mindre än vad som blir tillgodo. För att ta reda på saldo eller giltighetstid
-                    på ditt presentkort vänligen besök butik. Presentkorten gäller inte på intersport.se</p> 
+                    <p>Produkterna måste vara inköpta under kampanjperioden 28 mars -29 maj 2016. Bilden på kvittot ska vara
+                        tagen så man tydligt kan se inköpsdatum, inköpsställe, klockslag och antal inköpta Risifrutti. Kvitton
+                        måste laddas upp senast en vecka efter kampanjens slut.</p>
+                    <p>Efter ca 2 veckor får du Intersports presentkort skickat till dig. Värdet på presentkortet aktiveras
+                        inom 7 arbetsdagar.</p>
+                    <p>Vi tar ej ansvar för försändelser som försvinner i postgången. Vi hanterar dina personuppgifter enligt
+                        Personuppgiftslagen. Informationen kommer inte att säljas eller delas till tredje part.</p>
+                    <p>OBS! Begränsat antal! Max 3 presentkort per hushåll!</p>
+                    <p>Presentkortet är giltigt i 3 år från inköpsdatum. Borttappat kort ersätts ej. Kan ej lösas in mot kontanter.
+                        Mer information om presentkort hittar du under Frågor och svar på
+                        <a href="https://www.intersport.se/kundservice/fragor--svar/presentkort/">www.intersport.se</a> </p>
+                    <p>Presentkort är en värdehandling på samma sätt som pengar. Om du tappar bort det har du inte rätt att
+                        få ett nytt av butiken. Ett presentkort gäller i tio år om inget annat anges på presentkortet. Presentkortet
+                        kan inte lösas in mot kontanta pengar, och du kan inte heller få kontanter i växel om du handlar
+                        för mindre än vad som blir tillgodo. För att ta reda på saldo eller giltighetstid på ditt presentkort
+                        vänligen besök butik. Presentkorten gäller inte på intersport.se</p>
+                    <h3>Kontakt</h3>
+                    <a name="kontakt"></a>
+                    <p>Frågor besvaras av Konsumentkontakt telefon 020-75 00 10 eller konsumentkontakt@orklafoods.se
+                        </p>
                 </div>
+
             </div>
         </div>
         {{>footer}}
