--- a/client/front/faq.html
+++ b/client/front/faq.html
@@ -20,7 +20,7 @@
                     <p>Presentkort är en värdehandling på samma sätt som pengar. Om du tappar bort det har du inte rätt att
                         få ett nytt av butiken. Ett presentkort gäller i tio år om inget annat anges på presentkortet. Presentkortet
                         kan inte lösas in mot kontanta pengar, och du kan inte heller få kontanter i växel om du handlar
-                        för mindre än vad som blir tillgodo. För att ta reda på saldo eller giltighetstid på ditt presentkort
+                        för mindre än vad som blir tillgodo. Vid mellanskillnad får du ett tillgodokvitto. För att ta reda på saldo eller giltighetstid på ditt presentkort
                         vänligen besök butik. Presentkorten gäller inte på intersport.se</p>
                     <h3>Kontakt</h3>
                     <a name="kontakt"></a>
