--- a/client/front/upload.html
+++ b/client/front/upload.html
@@ -62,7 +62,7 @@
                             <p> Du har samlat in {{numOfBuys}} Risifrutti. När du har fått 25 st så skickar vi dig
                                 ett presentkort på Intersport.</p>
                             {{#if user.profile.coupons}}
-                            <p>Du har samlat ihop till {{user.profile.coupons}} av 3 möjliga kuponger</p>
+                            <p>Du har samlat ihop till {{user.profile.coupons}} av 3 möjliga kuponger.</p>
                             {{/if}}
                         </div>
                     </div>
