--- a/client/front/competition.html
+++ b/client/front/competition.html
@@ -52,6 +52,9 @@
             <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3" style="padding-top:50px">
                 <a href="/skapa-konto" class="btn btn-default btn-block btn-lg">Skapa konto här</a>
                 <a href="/logga-in" class="btn btn-default btn-block btn-lg">Logga in här</a>
+                {{#if loggedIn}}
+                    <a href="/ladda-upp" class="btn btn-default btn-block btn-lg">Till uppladdningen</a>
+                {{/if}}    
             </div>
         </div>
     </div>
