--- a/client/front/upload.html
+++ b/client/front/upload.html
@@ -64,6 +64,7 @@
                             {{#if user.profile.coupons}}
                             <p>Du har samlat ihop till {{user.profile.coupons}} av 3 möjliga kuponger.</p>
                             {{/if}}
+                            <p>Det finns {{totalCoupons}} kvar att samla.</p>
                         </div>
                     </div>
                 </div>
