--- a/client/front/faq.html
+++ b/client/front/faq.html
@@ -8,7 +8,7 @@
                     <a name="villkor"></a>
                     <p>Produkterna måste vara inköpta under kampanjperioden 28 mars -29 maj 2016. Bilden på kvittot ska vara
                         tagen så man tydligt kan se inköpsdatum, inköpsställe, klockslag och antal inköpta Risifrutti. Kvitton
-                        måste laddas upp senast en vecka efter kampanjens slut.</p>
+                        måste laddas upp senast en vecka efter kampanjens slut. Kvittot är personligt och kan ej delas med andra användare.</p>
                     <p>Efter ca 2 veckor får du Intersports presentkort skickat till dig. Värdet på presentkortet aktiveras
                         inom 7 arbetsdagar.</p>
                     <p>Vi tar ej ansvar för försändelser som försvinner i postgången. Vi hanterar dina personuppgifter enligt
