color fix in user.html

--- a/client/admin/view_user.html
+++ b/client/admin/view_user.html
@@ -1,5 +1,5 @@
 <template name="view_user">
-    <input id="email"/>
+    <input id="email" style="color:black !important"/>
     <button id="go">Ladda</button>
      {{#each receipts}}
             <div>
