--- a/client/front/competition.html
+++ b/client/front/competition.html
@@ -43,17 +43,20 @@
     <div class="container">
         <div class="row" id="start-container">
             <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1" style="padding-top: 100px">
-
+                <h1>Kampanjen är avslutad!</h1>
+                <br/>
+                <br/>
+                <br/>
                 <img src="start.png" id="start" class="hidden-xs" />
                 <img src="start_mobile.png" id="start" class="visible-xs-block" />
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3" style="padding-top:50px">
-                <a href="/skapa-konto" class="btn btn-default btn-block btn-lg">Skapa konto här</a>
-                <a href="/logga-in" class="btn btn-default btn-block btn-lg">Logga in här</a>
+                <a href="/skapa-konto" class="btn btn-default btn-block btn-lg" disabled>Skapa konto här</a>
+                <a href="/logga-in" class="btn btn-default btn-block btn-lg" disabled>Logga in här</a>
                 {{#if loggedIn}}
-                    <a href="/ladda-upp" class="btn btn-default btn-block btn-lg">Till uppladdningen</a>
+                    <a href="/ladda-upp" class="btn btn-default btn-block btn-lg" disabled>Till uppladdningen</a>
                 {{/if}}    
             </div>
         </div>
